`List.getFirst()` and `List.getLast()` Methods Have Been Used Instead of `List.get(0)` and `List.get(List.size() - 1)`